Added inverted obstacles

--- a/FlappyBird/styles.css
+++ b/FlappyBird/styles.css
@@ -1,10 +1,39 @@
+body{
+    display: flex;
+}
 .game-container {
 
     width: 500px;
     height: 730px;
     position: absolute;
+
+    left: 60px;
+}
+.border-left{
+    width: 80px;
+    height: 790px;
+    position: absolute;
+    background-color: white;
+    z-index: +2;
 }
 
+.border-right{
+    width: 80px;
+    height: 790px;
+    position: absolute;
+    background-color: white;
+    z-index: +2;
+    left: 580px;
+}
+
+.border-top{
+    width: 660;
+    height: 50px;
+    position: absolute;
+    background-color: white;
+    z-index: +2;
+    top: -50px;
+}
 .sky{
     background-image: url('fb-game-background.png');
     width: 500px;
@@ -16,9 +45,10 @@
 .ground{
     background-image: url('bottom-background.png');
     width: 500px;
-    height: 150px;
+    height: 170px;
     position: absolute;
     top: 500px;
+    z-index: +1;
 }
 
 .bird{
@@ -34,3 +64,11 @@ width: 60px;
 height: 300px;
 position:absolute;
 }
+
+.topObstacles{
+    background-image: url('flappybird-pipe.png');
+    transform: rotate(180deg);
+    width: 60px;
+    height: 300px;
+    position:absolute;
+    }
